--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=RabbitMQProducer
+application.vendor=skuarch
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,11 +25,12 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/RabbitMQProducer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.commons-cli-1.1.jar=C:\\Users\\skuarch\\Documents\\apis\\rabbitmq-java-client-bin-3.0.4\\commons-cli-1.1.jar
-file.reference.commons-io-1.2.jar=C:\\Users\\skuarch\\Documents\\apis\\rabbitmq-java-client-bin-3.0.4\\commons-io-1.2.jar
-file.reference.rabbitmq-client-tests.jar=C:\\Users\\skuarch\\Documents\\apis\\rabbitmq-java-client-bin-3.0.4\\rabbitmq-client-tests.jar
-file.reference.rabbitmq-client.jar=C:\\Users\\skuarch\\Documents\\apis\\rabbitmq-java-client-bin-3.0.4\\rabbitmq-client.jar
+file.reference.commons-cli-1.1.jar=/home/skuarch/applications/apis/rabbitmq-java-client-bin-3.0.4/commons-cli-1.1.jar
+file.reference.commons-io-1.2.jar=/home/skuarch/applications/apis/rabbitmq-java-client-bin-3.0.4/commons-io-1.2.jar
+file.reference.rabbitmq-client-tests.jar=/home/skuarch/applications/apis/rabbitmq-java-client-bin-3.0.4/rabbitmq-client-tests.jar
+file.reference.rabbitmq-client.jar=/home/skuarch/applications/apis/rabbitmq-java-client-bin-3.0.4/rabbitmq-client.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -41,6 +43,7 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
+javac.profile=
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
